# yara

./: .gitignore  CMakeLists.txt  INFO  README  bits_context.h  bits_hits.h  bits_matches.h  bits_seeds.h  classifier.h  context.h  extender.h  filter.h  find_extender.h  find_verifier.h  genome.h  genome_index.h  hits.h  index.h  index_fm.h  indexer.cpp  locator.h  mapper.cpp  mapper.cu  mapper.cuh  mapper.h  mapper_aligner.h  mapper_classifier.h  mapper_collector.h  mapper_extender.h  mapper_filter.h  mapper_ranker.h  mapper_seeder.h  mapper_selector.h  mapper_verifier.h  mapper_writer.h  matches.h  misc.h  misc_options.h  misc_tags.h  misc_timer.h  (+11 more)
tests/: datasets  generate_outputs.sh  run_tests.py
tests/logs/: indexer.celegans.stdout  mapper.celegans.cuda.stdout  mapper.celegans.t1.stdout  mapper.celegans.t8.stdout  mapper.hg18.cuda.stdout  mapper.hg18.t1.stdout  mapper.hg18.t8.stdout
